Added AirPlane Button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <script src="https://unpkg.com/css-doodle@0.26.4/css-doodle.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+
     <title>Dev</title>
 </head>
 
@@ -522,6 +524,7 @@ L54.42,0z"/></g></g></svg>
         </div>
         <div class="four columns team-title">
           <div class="skill-columns-bar">
+            <h3>The Stack</h3>
             <div class="progressBar">
               <h4>HTML5 / CSS3</h4>
               <div class="progressBarContainer">
@@ -535,7 +538,7 @@ L54.42,0z"/></g></g></svg>
               </div>
             </div>
             <div class="progressBar">
-              <h4>Javascript / Jquery</h4>
+              <h4>Javascript / Jquery / TypeScript</h4>
               <div class="progressBarContainer">
                 <div class="progressBarValue value-30"></div>
               </div>
@@ -591,7 +594,7 @@ L54.42,0z"/></g></g></svg>
   
   <section id="skills">
     <div class="container">
-      <!-- <h1>Skills</h1>
+      <h1>Skills</h1>
       <div class="block"></div>
 
       <div class="skill-row">
@@ -726,17 +729,19 @@ L54.42,0z"/></g></g></svg>
         <input id="name" type="text" placeholder="NAME">
         <input id="email" type="text" placeholder="E-MAIL">
         <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
-       <input id="submit" type="submit" value="SEND">
+       <!-- <input id="submit" type="submit" value="SEND"> -->
       </form>
+      <div class="planeContainer">
+        <button class="buttonPlane">
+          <span class="default">Send</span>
+          <span class="success">Sent</span>
+          <div class="left"></div>
+          <div class="right"></div>
+        </button>
+      </div>
     </div>
-    <div class="planeContainer">
-    <button class="buttonPlane">
-      <span class="default">Send</span>
-      <span class="success">Sent</span>
-      <div class="left"></div>
-      <div class="right"></div>
-  </button>
-</div>
+
+
 
   </section>
 
